<resources>
    <string name="app_name">Brimo\'s Sea</string>
    <string name="title">Brimo\'s Sea</string>
    <string name="play_button">Play</string>
    <string name="background_img_des">background_img</string>
    <string name="high_score">High Score:</string>
    <string name="game_over">Game Over</string>
    <string name="restart">Restart</string>
    <string name="current_score">Current Score:</string>
    <string name="nextLevel_button">Next Level</string>
</resources>